Bug 336476 - Clone tool artifacts when cloning canvas edges
Summary: Clone tool artifacts when cloning canvas edges
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-19 19:44 UTC by vanyossi
Modified: 2014-06-20 07:27 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Clone tool behavior on edges. (1.32 MB, video/mp4)
2014-06-19 19:45 UTC, vanyossi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description vanyossi 2014-06-19 19:44:02 UTC
Clone tool seems to repeat the border in order to keep cloning.

This causes the border to repeat the canvas border color. As lon gas there is no pattern available the clone results are good. But as exaggerated on the attached video results can be very nasty.

Reproducible: Always



Expected Results:  
Clone real available pixel data, if there is no data layer edge should be cloned.
Comment 1 vanyossi 2014-06-19 19:45:36 UTC
Created attachment 87298 [details]
Clone tool behavior on edges.
Comment 2 Dmitry Kazakov 2014-06-20 07:27:18 UTC
Git commit c2e05bb0f6aa5883f20bf9c7450f3dcbdd798690 by Dmitry Kazakov.
Committed on 20/06/2014 at 07:26.
Pushed by dkazakov into branch 'master'.

Remove explicit limiting of the device in the Duplicate Op

This limit is dated in 2008. I don't know why it was introduced.

M  +0    -8    krita/plugins/paintops/defaultpaintops/duplicate/kis_duplicateop.cpp

http://commits.kde.org/calligra/c2e05bb0f6aa5883f20bf9c7450f3dcbdd798690