Remove explicit limiting of the device in the Duplicate Op

This limit is dated in 2008. I don't know why it was introduced.

BUG:336476