krita/plugins/paintops/defaultpaintops/duplicate/kis_duplicateop.cpp
@@ -168,14 +168,6 @@ KisSpacingInformation KisDuplicateOp::paintAt(const KisPaintInformation& info)
     qint32 sw = dstRect.width();
     qint32 sh = dstRect.height();
 
-    if (!realSourceDevice->defaultBounds()->wrapAroundMode()) {
-        if (srcPoint.x() < 0)
-            srcPoint.setX(0);
-
-        if (srcPoint.y() < 0)
-            srcPoint.setY(0);
-    }
-
     // Perspective correction ?
 
 
